--- a/css/chat-rtl.css
+++ b/css/chat-rtl.css
@@ -155,3 +155,12 @@
 .scroller-3iiyhZ {
   direction: rtl !important;
 }
+/* التعبيرات التفاعلية على الرسائل */
+.reaction-2A2y9y {
+  margin-left: 0.25rem !important;
+  margin-right: 0 !important;
+}
+
+.reactionInner-9eVHJa {
+  flex-direction: row-reverse !important;
+}
